--- a/VERA/VERA-DESKTOP/CLIENTS/RUN/FLEXOPRINT/Win32/Debug/flexoprint_dt.ini
+++ b/VERA/VERA-DESKTOP/CLIENTS/RUN/FLEXOPRINT/Win32/Debug/flexoprint_dt.ini
@@ -6,6 +6,6 @@ hopecertstore='CERTS STORE'
 dbpath='localhost/3050:d:\FBDATA\VERA\flexoprint.fdb'
 libpath=C:\FIREBIRD304-32\fbclient.dll
 
-[certcenter]
+[hopecertstore]
 dbpath='localhost/3050:d:\FBDATA\hopecertstore.fdb'
 libpath=C:\FIREBIRD304-32\fbclient.dll
