--- a/VERA/VERA-DESKTOP/CLIENTS/RUN/FLEXOPRINT/Win32/Debug/flexoprint_dt.ini
+++ b/VERA/VERA-DESKTOP/CLIENTS/RUN/FLEXOPRINT/Win32/Debug/flexoprint_dt.ini
@@ -3,7 +3,7 @@ flexoprint='FLEXO PRINT'
 hopecertstore='CERTS STORE' 
 
 [flexoprint]
-dbpath='localhost/3050:d:\FBDATA\VERA\flexoprint.fdb'
+dbpath=localhost/3050:flexoprint
 libpath=C:\FIREBIRD304-32\fbclient.dll
 
 [hopecertstore]
