--- a/VERA/VERA-DESKTOP/CLIENTS/FLEXOPRINT/flexoprint_dt.dproj
+++ b/VERA/VERA-DESKTOP/CLIENTS/FLEXOPRINT/flexoprint_dt.dproj
@@ -224,6 +224,7 @@
             <DesignClass>TCustomDropDownFormEh</DesignClass>
         </DCCReference>
         <DCCReference Include="C:\THIRDLIB.XE260\Eh\Lib\DBGridEh.pas"/>
+        <DCCReference Include="..\..\COMMON\DOCS\FDAC\fdsqlquery.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
