--- a/MIKKO/RealThinAppOne/CLIENT/ENTRANCE/mikko_entrance2.dproj
+++ b/MIKKO/RealThinAppOne/CLIENT/ENTRANCE/mikko_entrance2.dproj
@@ -121,6 +121,10 @@
         <DCCReference Include="FmAdditionalTest.pas">
             <Form>AdditionalTestFm</Form>
         </DCCReference>
+        <DCCReference Include="..\..\..\COMMON\fm_setfilter.pas">
+            <Form>FmSetFilter</Form>
+            <FormType>dfm</FormType>
+        </DCCReference>
         <BuildConfiguration Include="Debug">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
